--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,7 +34,8 @@
 @import "./blocks/list";
 @import "./blocks/spinner";
 @import "./blocks/card";
-
+//
+@import "./blocks/index-swiper";
 //
 @import "./blocks/page";
 @import "./blocks/page-header";
@@ -99,3 +100,4 @@
 @import "./blocks/os-lic";
 @import "./blocks/serv-comp";
 @import "./blocks/cases";
+@import "./blocks/index-about-us";
