--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,7 +15,7 @@ $max-tablet-width: $desktop-width - 1px;
 $side-panel-available: $desktop-width;
 
 // Colors
-$primary-color: #453fa9;
+$primary-color: #4d45b1;
 $button-color: #ff8000;
 $bg-color: #453fa9;
 $bg2-color: #f7f7fd;
