--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -1,1 +1,23 @@
 // миксины
+@mixin image-layering {
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(77, 69, 177, 28%);
+  }
+}
+
+@mixin container-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  text-decoration: none;
+}
