сделал страницу каталога оборудования

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@
 @import "./blocks/list";
 @import "./blocks/spinner";
 @import "./blocks/card";
+@import "./blocks/eq-card";
 //
 @import "./blocks/index-swiper";
 //
@@ -65,7 +66,6 @@
 @import "./blocks/form-section";
 @import "./blocks/need-help";
 @import "./blocks/consultation";
-@import "./blocks/equipment-card";
 @import "./blocks/import-replacement";
 @import "./blocks/filter";
 @import "./blocks/product-card";
@@ -76,7 +76,6 @@
 @import "./blocks/index-header";
 @import "./blocks/service-card";
 @import "./blocks/services";
-@import "./blocks/equipment";
 @import "./blocks/sharing-exp";
 @import "./blocks/work-with-us";
 @import "./blocks/services-solutions";
@@ -101,3 +100,4 @@
 @import "./blocks/serv-comp";
 @import "./blocks/cases";
 @import "./blocks/index-about-us";
+@import "./blocks/eq-catalog";
