--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -32,6 +32,7 @@ $menu-link-color-desktop: #535353;
 $header-contacts-icon-bg: #4d45b1;
 $menu-dropdown-title-color: #2a2a2a;
 $card-font-color: #2a2a2a;
+$light-black: #535353;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
