--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -21,3 +21,35 @@
   z-index: 1;
   text-decoration: none;
 }
+
+@mixin image-wrapper($percentage) {
+  position: relative;
+  height: 0;
+  padding-bottom: $percentage;
+}
+
+@mixin image-in-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@mixin null-mp {
+  margin: 0;
+  padding: 0;
+}
+
+@mixin link-with-icon($right-padding) {
+  position: relative;
+  padding-right: $right-padding;
+
+  & img {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+  }
+}
