сделал category-catalog, eq-subcatalog + подправил косячки

--- a/src/scss/blocks/breadcumbs.scss
+++ b/src/scss/blocks/breadcumbs.scss
@@ -2,6 +2,10 @@
   padding: 23px 0;
 
   color: $grey-color;
+
+  @media (width < $desktop-width) {
+    display: none;
+  }
 }
 
 .breadcumbs__list {
