--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -101,3 +101,4 @@
 @import "./blocks/cases";
 @import "./blocks/index-about-us";
 @import "./blocks/eq-catalog";
+@import "./blocks/category-catalog";
