--- a/src/views/blocks/index-swiper.j2
+++ b/src/views/blocks/index-swiper.j2
@@ -16,7 +16,7 @@
                 <div class="index-swiper__image-wrapper">
                   <picture>
                     <source type="image/webp" srcset="@img/index-swiper-slide-1.webp 1x">
-                    <img class="index-swiper__slide-image" src="@img/index-swiper-slide-1.jpg" alt="" width="630" height="513">
+                    <img class="index-swiper__slide-image" src="@img/index-swiper-slide-1.jpg" alt="" width="630" height="513" loading="lazy">
                   </picture>
                 </div>
               </div>
