--- a/src/views/pages/eq-catalog.j2
+++ b/src/views/pages/eq-catalog.j2
@@ -30,26 +30,26 @@
                     <div class="eq-card__image-wrapper">
                       <picture>
                         <source type="image/webp" srcset="@img/cards/eq-card-1.webp 1x">
-                        <img class="eq-card__image" src="@img/cards/eq-card-1.jpg" alt="" width="262" height="181">
+                        <img class="eq-card__image" src="@img/cards/eq-card-1.jpg" alt="" width="347" height="225" loading="lazy">
                       </picture>
-                      <a class="eq-card__image-link" href="vendors.html"></a>
+                      <a class="eq-card__image-link" href="eq-subcatalog.html"></a>
                     </div>
-                    <a class="eq-card__title" href="vendors.html">Серверное оборудование</a>
+                    <a class="eq-card__title" href="eq-subcatalog.html">Серверное оборудование</a>
                     <ul class="eq-card__list">
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="vendors.html">
+                        <a class="eq-card__list-link" href="vendor-page.html">
                           Exapower
-                          <img src="@img/icons/exapower-icon.png" alt="" width="34" height="17">
+                          <img src="@img/icons/exapower-icon.png" alt="" width="34" height="17 ">
                         </a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="vendors.html">Lenovo</a>
+                        <a class="eq-card__list-link" href="vendor-page.html">Lenovo</a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="vendors.html">HPE</a>
+                        <a class="eq-card__list-link" href="vendor-page.html">HPE</a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="vendors.html">DELL</a>
+                        <a class="eq-card__list-link" href="vendor-page.html">DELL</a>
                       </li>
                     </ul>
                   </div>
@@ -60,26 +60,26 @@
                     <div class="eq-card__image-wrapper">
                       <picture>
                         <source type="image/webp" srcset="@img/cards/eq-card-2.webp 1x">
-                        <img class="eq-card__image" src="@img/cards/eq-card-2.jpg" alt="" width="262" height="181">
+                        <img class="eq-card__image" src="@img/cards/eq-card-2.jpg" alt="" width="347" height="225" loading="lazy">
                       </picture>
                       <a class="eq-card__image-link" href="eq-subcatalog.html"></a>
                     </div>
                     <a class="eq-card__title" href="eq-subcatalog.html">Серверное оборудование</a>
                     <ul class="eq-card__list">
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="eq-subcatalog.html">Процессоры</a>
+                        <a class="eq-card__list-link" href="category-catalog.html">Процессоры</a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="eq-subcatalog.html">Блоки питания</a>
+                        <a class="eq-card__list-link" href="category-catalog.html">Блоки питания</a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="eq-subcatalog.html">Вентиляторы</a>
+                        <a class="eq-card__list-link" href="category-catalog.html">Вентиляторы</a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="eq-subcatalog.html">Дисковые корзины</a>
+                        <a class="eq-card__list-link" href="category-catalog.html">Дисковые корзины</a>
                       </li>
                       <li class="eq-card__list-item">
-                        <a class="eq-card__list-link" href="eq-subcatalog.html">Жесткие диски SDD</a>
+                        <a class="eq-card__list-link" href="category-catalog.html">Жесткие диски SDD</a>
                       </li>
                     </ul>
                   </div>
