--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -53,3 +53,35 @@
     transform: translateY(-50%);
   }
 }
+
+@mixin bg-clip-path(
+  $height,
+  $center,
+  $right-bottom-height,
+  $left-bottom-height
+) {
+  position: relative;
+
+  @media (min-width: $desktop-width) {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: -1;
+
+      width: 100%;
+      height: 100%;
+
+      background-color: $bg2-color;
+
+      clip-path: polygon(
+        0 0,
+        100% 0,
+        100% calc($height - $right-bottom-height),
+        $center $height,
+        0 calc($height - $left-bottom-height)
+      );
+    }
+  }
+}
