добавил слайдер других проектов на главную

--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -8,6 +8,8 @@
     <h1 class="visually-hidden">Главная ExaSystems</h1>
     {% include "./blocks/index-swiper.j2" %}
 
+    {% include "./blocks/cases-swiper.j2" %}
+
     {# {% include "./blocks/features-under-key.j2" %}
     {% include "./blocks/services.j2" %}
     {% include "./blocks/equipment.j2" %}
@@ -120,7 +122,9 @@
 
 {% block js %}
   <script src="./js/swiper-bundle.min.js" defer></script>
+  <script src="./js/swipers.min.js" defer></script>
   <script src="./js/index-swiper.min.js" defer></script>
   <script src="./js/modal-image.min.js" defer></script>
+  <script src="./js/cases.min.js" defer></script>
   <script src="./js/main.min.js" defer></script>
 {% endblock %}
