--- a/src/views/pages/cases.j2
+++ b/src/views/pages/cases.j2
@@ -56,7 +56,7 @@
                   </div>
                 </div>
                 <div class="cases__card-gallery">
-                  <a class="cases__card-big-img-wrapper" href="@img/cases/photo-1-big.webp" data-case-card-original>
+                  <a class="cases__card-big-img-wrapper" href="@img/cases/photo-1-big.webp" data-case-card-original data-image-can-open-in-modal>
                     <picture>
                       <source type="image/webp" srcset="@img/cases/photo-1-big.webp 1x">
                       <img class="cases__card-big-img" src="@img/cases/photo-1-big.jpg" alt="" width="679" height="389" loading="lazy">
