--- a/src/scss/blocks/modal-image.scss
+++ b/src/scss/blocks/modal-image.scss
@@ -13,7 +13,7 @@
 
   background-color: rgb(0 0 0 / 90%);
 
-  -ms-overflow-style: none;  /* IE and Edge */
+  -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
@@ -92,6 +92,13 @@
   animation-duration: 0.6s;
 
   @media (min-width: $tablet-width) {
-    max-width: 80%;
+    max-width: 90%;
+  }
+}
+
+.modal-image__content-wrapper--so-big {
+  @media (width >= $tablet-width) {
+    height: 98%;
+    width: auto;
   }
 }
