--- a/src/scss/blocks/card.scss
+++ b/src/scss/blocks/card.scss
@@ -5,6 +5,10 @@
     & .card__title {
       color: $button-color;
     }
+    & .card__image-wrapper::after {
+      background-color: #2596ff;
+      opacity: 0.3;
+    }
   }
   &:active {
     opacity: 0.6;
@@ -22,15 +26,7 @@
   border-radius: 3px;
   overflow: hidden;
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(77, 69, 177, 28%);
-  }
+  @include image-layering;
 }
 .card__image {
   position: absolute;
