--- a/src/scss/blocks/case.scss
+++ b/src/scss/blocks/case.scss
@@ -226,8 +226,31 @@
 }
 
 .case__big-photo-wrapper {
+  position: relative;
   margin-top: 20px;
   margin-bottom: 40px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: #2596ff;
+    opacity: 0;
+
+    transition: opacity 0.3s ease;
+  }
+
+  &:hover {
+    &::after {
+      opacity: 0.3;
+    }
+  }
 
   @media (width < $desktop-width) {
     margin-bottom: 20px;
@@ -250,7 +273,6 @@
     margin-bottom: 80px;
   }
 }
-
 
 .case__gallery-swiper-buttons {
   justify-content: flex-end;
