--- a/src/scss/blocks/index-swiper.scss
+++ b/src/scss/blocks/index-swiper.scss
@@ -1,11 +1,11 @@
-.index-swiper {
-}
 .index-swiper__slide {
-  background-color: $primary-color;
-  color: #fff;
-  cursor: default;
-  border-radius: 5px;
   overflow: hidden;
+
+  color: #ffffff;
+
+  background-color: $primary-color;
+  border-radius: 5px;
+  cursor: default;
 }
 
 .index-swiper__slide-container {
@@ -15,9 +15,11 @@
 
   @media (width >= $tablet-width) {
     display: grid;
+
     grid-template-columns: 45% 55%;
   }
 }
+
 .index-swiper__slide-main {
   display: flex;
   flex-direction: column;
@@ -27,22 +29,26 @@
     padding: 37px 50px;
   }
 }
+
 .index-swiper__slide-title {
   margin: 0;
   padding: 0;
-  font-family: $jost-font;
+
   font-weight: 500;
   font-size: 35px;
   line-height: 115%;
+  font-family: $jost-font;
 
   @media (width >= $desktop-width) {
     font-size: 50px;
   }
 }
+
 .index-swiper__slide-text {
   margin: 0;
   margin-top: 15px;
   padding: 0;
+
   font-size: 16px;
   line-height: 130%;
 
@@ -50,18 +56,22 @@
     margin-top: 20px;
   }
 }
+
 .index-swiper__slide-button {
-  min-height: 57px;
-  max-width: 240px;
-  margin-top: 25px;
   z-index: 2;
+
+  max-width: 240px;
+  min-height: 57px;
+  margin-top: 25px;
 
   @media (width < $tablet-width) {
     display: none;
   }
 }
+
 .index-swiper__image-wrapper {
   position: relative;
+
   @include image-layering;
 
   @media (width < $tablet-width) {
@@ -69,14 +79,17 @@
     padding-bottom: 52.5%;
   }
 }
+
 .index-swiper__slide-image {
   position: absolute;
   top: 0;
   left: 0;
+
+  flex-grow: 1;
   width: 100%;
   height: 100%;
+
   object-fit: cover;
-  flex-grow: 1;
 }
 
 .index-swiper__slide-link {
@@ -85,6 +98,7 @@
 
 .index-swiper__pagination {
   position: initial;
+
   padding: 12px 0;
 
   @media (width >= $desktop-width) {
