--- a/src/scss/blocks/menu.scss
+++ b/src/scss/blocks/menu.scss
@@ -9,7 +9,6 @@
     padding: 10px 0;
     overflow-x: hidden;
   }
-
   @media (min-width: $desktop-width) {
     display: flex;
     flex-direction: column;
@@ -28,9 +27,11 @@
 
 .menu__main {
   @media (min-width: $desktop-width) {
-    padding: $menu-main-vertical-paddings 0;
-    background-color: #ffffff;
     position: relative;
+
+    padding: $menu-main-vertical-paddings 0;
+
+    background-color: #ffffff;
   }
 }
 
@@ -40,6 +41,7 @@
   z-index: 10;
 
   width: 100%;
+
   background-color: #ffffff;
   border-bottom: 1px solid #d0d0d0;
 
@@ -62,6 +64,7 @@
     flex-wrap: wrap;
   }
 }
+
 .menu__secondary {
   @media (width < $desktop-width) {
     display: none;
@@ -79,8 +82,8 @@
     display: none;
   }
   @media (width >= $desktop-width) {
-    margin-left: 3em;
     align-self: stretch;
+    margin-left: 3em;
   }
 }
 
@@ -152,7 +155,6 @@
     font-family: $jost-font;
     text-decoration: none;
   }
-
   @media (min-width: $desktop-width) {
     padding: 5px 10px;
 
@@ -170,9 +172,10 @@
 
 .menu__link--has-dropdown {
   @media (width < $desktop-width) {
-    gap: 10px;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+
+    gap: 10px;
     &::after {
       content: "";
 
@@ -223,9 +226,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  overflow-y: scroll;
 
   display: none;
+  overflow-y: scroll;
 }
 
 .menu__sub--active {
@@ -307,8 +310,8 @@
   flex-grow: 1;
   max-width: initial;
   height: 65px;
-  margin-left: -18px;
   margin-right: -18px;
+  margin-left: -18px;
 
   font-weight: 500;
   font-size: 19px;
@@ -326,10 +329,10 @@
     display: flex;
     flex-grow: 1;
     width: 100%;
+    padding: 80px 17px 0;
     padding-top: 80px;
     padding-bottom: 0;
     padding-left: 18px;
-    padding: 80px 17px 0 17px;
 
     background: linear-gradient(180deg, #453fa9 0%, #675fc6 100%);
 
@@ -358,11 +361,10 @@
     }
 
     & .menu__mobile-container {
-      padding-left: 0;
       padding-right: 0;
+      padding-left: 0;
     }
   }
-
   @media (width < $tablet-width) {
     & .page-header__buttons {
       position: absolute;
@@ -374,23 +376,28 @@
 
 .menu__dropdown {
   position: relative;
-  width: 100%;
+
   display: none;
+  width: 100%;
   padding: 10px 0;
   padding-bottom: 60px;
-  background-color: #ffffff;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+
   color: $menu-dropdown-title-color;
+
+  background-color: #ffffff;
+  box-shadow: 10px 10px 10px rgb(0 0 0 / 15%);
+
   // border: 1px solid #d0d0d0;
 
   &::after {
     content: "";
     position: absolute;
     top: 10px;
-    left: 0;
     right: 0;
+    left: 0;
 
     height: 1px;
+
     background-color: #d0d0d0;
   }
 
@@ -398,6 +405,7 @@
     display: none;
   }
 }
+
 .menu__dropdown-content {
   display: flex;
   flex-direction: column;
@@ -409,10 +417,11 @@
 .menu__dropdown-list-title {
   margin: 0;
   padding: 0;
-  font-family: $jost-font;
-  font-size: 25px;
+
   font-weight: 500;
+  font-size: 25px;
   line-height: 130%;
+  font-family: $jost-font;
   color: inherit;
 }
 
@@ -420,8 +429,7 @@
   text-decoration: none;
 }
 
-.menu__dropdown-main {
-}
+
 
 .menu__dropdown-main-lists-container {
   display: flex;
@@ -453,8 +461,9 @@
 
 .menu__dropdown-main--theme2 {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+
   gap: 80px;
+  grid-template-columns: repeat(2, 1fr);
 
   & .menu__dropdown-main-lists-container {
     flex-direction: column;
@@ -468,21 +477,23 @@
 .menu__dropdown-list-title {
   font-size: 20px;
 }
+
 .menu__dropdown-list {
   display: flex;
   flex-direction: column;
   margin-top: 15px;
+
   gap: 5px;
 }
 
 .menu__dropdown-list-wrapper--vendors .menu__dropdown-list {
   display: grid;
+
   gap: 10px;
   grid-template-columns: repeat(auto-fill, 130px);
 }
 
-.menu__dropdown-list-item {
-}
+
 .menu__dropdown-list-link {
   font-weight: 300;
   font-size: 16px;
@@ -492,14 +503,18 @@
 
 .menu__dropdown-list-link--with-icon {
   position: relative;
+
   padding-right: 45px;
 
   & img {
-    max-width: 40px;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
     right: 0;
+
+    max-width: 40px;
+
+    transform: translateY(-50%);
+
     transition: opacity 0.3s ease;
   }
 
@@ -515,8 +530,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4px;
   height: 53px;
+  padding: 4px;
+
   border: 1px solid #d0d0d0;
   border-radius: 3px;
 
@@ -530,6 +546,7 @@
 .menu__vendor-link-image {
   width: 100%;
   height: 100%;
+
   object-fit: contain;
 }
 
@@ -551,7 +568,8 @@
 
 .menu__cards {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+
   gap: 40px;
   grid-auto-rows: max-content;
+  grid-template-columns: repeat(2, 1fr);
 }
