--- a/src/scss/mixin.scss
+++ b/src/scss/mixin.scss
@@ -6,56 +6,60 @@
     position: absolute;
     top: 0;
     left: 0;
+
     width: 100%;
     height: 100%;
-    background-color: rgba(77, 69, 177, 28%);
+
+    background-color: rgb(77 69 177 / 28%);
+
     transition: opacity 0.3s ease;
     transition-property: opacity, background-color;
   }
 }
-
 @mixin container-link {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
+
   width: 100%;
   height: 100%;
-  z-index: 1;
+
   text-decoration: none;
 }
-
 @mixin image-wrapper($percentage) {
   position: relative;
+
   height: 0;
   padding-bottom: $percentage;
 }
-
 @mixin image-in-wrapper {
   position: absolute;
   top: 0;
   left: 0;
+
   width: 100%;
   height: 100%;
+
   object-fit: cover;
 }
-
 @mixin null-mp {
   margin: 0;
   padding: 0;
 }
-
 @mixin link-with-icon($right-padding) {
   position: relative;
+
   padding-right: $right-padding;
 
   & img {
     position: absolute;
     top: 50%;
     right: 0;
+
     transform: translateY(-50%);
   }
 }
-
 @mixin bg-clip-path(
   $height,
   $center,
