--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -33,6 +33,8 @@ $header-contacts-icon-bg: #4d45b1;
 $menu-dropdown-title-color: #2a2a2a;
 $card-font-color: #2a2a2a;
 $light-black: #535353;
+$dark-color: #2a2a2a;
+$light-dark-color: #535353;
 
 // Font
 $jost-font: "Jost", "Arial", sans-serif;
